<resources>
    <string name="app_name">Spyfall</string>

    <string name="custom_game_screen_create_button_title">Create</string>
    <string name="custom_game_screen_create_title">Create Room</string>
    <string name="custom_game_screen_empty_room_name_error">Room name should be non-empty</string>
    <string name="custom_game_screen_join_title">Join Room</string>
    <string name="custom_game_screen_room_name_hint">Name for a room</string>
    <string name="custom_game_screen_title">Custom Game</string>

    <string name="default_error_dialog_button">OK</string>
    <string name="default_error_dialog_message">Please check your network connection or try again later.</string>
    <string name="default_error_dialog_title">Something went wrong</string>

    <string name="home_screen_custom_game_button_title">Custom Game</string>
    <string name="home_screen_find_game_button_title">Find Game</string>
    <string name="home_screen_game_rules_button_title">Game Rules</string>
    <string name="home_screen_locations_reference_button">Locations Reference</string>

    <string name="locations_reference_screen_title">Locations Reference</string>

    <string name="room_screen_card_hint">Tap on card to reveal your role and/or location.\nYou can tap it again to flip it\'s sides</string>
    <string name="room_screen_loading_card_title">Loading card…</string>

    <string name="waiting_room_screen_players_readiness_format">%1$d of %2$d ready</string>
    <string name="waiting_room_screen_ready_button_title">Ready</string>
    <string name="waiting_room_screen_title">Waiting for players to be ready</string>
</resources>
